--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,61 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.corti</groupId>
-  <artifactId>JavaAuthentication</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>${commons-lang3.version}</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>${httpclient.version}</version>
-    </dependency>
-  </dependencies>
-  
-   <properties>        
-        <commons-lang3.version>3.8</commons-lang3.version>
-        <commons-codec.version>1.10</commons-codec.version>
-        <httpasyncclient.version>4.1.2</httpasyncclient.version>
-        <!-- testing -->
-        <wiremock.version>2.5.1</wiremock.version>
-        <httpcore.version>4.4.5</httpcore.version>
-        <httpclient.version>4.5.6</httpclient.version> <!-- 4.3.6 --> <!-- 4.4-beta1 -->
-        <!-- maven plugins -->
-        <cargo-maven2-plugin.version>1.6.1</cargo-maven2-plugin.version>
-</properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.corti</groupId>
+	<artifactId>JavaAuthentication</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${httpclient.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.corti</groupId>
+			<artifactId>JavaMailExample</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.corti</groupId>
+			<artifactId>JavaMailTLS</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
+	</dependencies>
+
+	<properties>
+		<commons-lang3.version>3.8</commons-lang3.version>
+		<commons-codec.version>1.10</commons-codec.version>
+		<httpasyncclient.version>4.1.2</httpasyncclient.version>
+		<!-- testing -->
+		<wiremock.version>2.5.1</wiremock.version>
+		<httpcore.version>4.4.5</httpcore.version>
+		<httpclient.version>4.5.6</httpclient.version> <!-- 4.3.6 --> <!-- 4.4-beta1 -->
+		<!-- maven plugins -->
+		<cargo-maven2-plugin.version>1.6.1</cargo-maven2-plugin.version>
+	</properties>
+	
+	<build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>      
+  </build>
+	
 </project>
